src/styles/global.css
@import "tailwindcss";
@plugin "daisyui";

@font-face {
  font-family: 'Montserrat Variable';
  font-style: normal;
  font-display: swap;
  font-weight: 100 900;
  src: url(https://cdn.jsdelivr.net/fontsource/fonts/montserrat:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}

@font-face {
  font-family: 'Mallanna';
  font-style: normal;
  font-display: swap;
  font-weight: 400;
  src: url(https://cdn.jsdelivr.net/fontsource/fonts/mallanna@latest/latin-400-normal.woff2) format('woff2'),
       url(https://cdn.jsdelivr.net/fontsource/fonts/mallanna@latest/latin-400-normal.woff) format('woff');
  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}

@utility container {
  margin-inline: auto;
  padding-inline: 1.5rem;
}

@layer base {
  html {
    @apply scroll-smooth;
  }

}

:root {
  box-sizing: border-box;

  --color-paper-bg: #FAF7F5;
  --color-paper-content: #04040f;
  --color-digital-bg: #272628;
  --color-digital-content: #e5e5e5;

  --color-accent-1: #FF028F;
  --color-accent-2: #0CFF00;
  --color-accent-3: #FFE800;
  --color-accent-4: #FB0101;
  --color-accent-5: #00DDFF;

}

html {
  scrollbar-gutter: stable;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Montserrat Variable';
}

h1 { font-weight: 700;}
h2 {font-size: 1.75rem; font-weight: 600;}
p{font-family: 'Mallanna'; font-size: 1.25rem; line-height: 1.2;}
a{font-family: 'Montserrat Variable'; font-size: 1rem; font-weight: 500; margin-bottom: .5rem;}
li a{font-family: 'Montserrat Variable'; font-size: 1.5rem; font-weight: 500;}

@media (min-width: 700px) {
  h1 { font-weight: 700;}
  h2 {font-size: 2rem; font-weight: 600;}
  p{font-family: 'Mallanna'; font-size: 1.5rem; line-height: 1.2; margin-bottom: 1rem;}
  a{font-family: 'Montserrat Variable'; font-size: 1.5rem; font-weight: 500;}
}

.paper_pattern {
  background-color: var(--color-paper-bg);
  background-image: url('/paper_dot_pattern.png');
  background-size: 10px 10px;
  background-repeat: repeat;
  color: var(--color-paper-content);
}

.digi_grid {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(2, 1fr);
    row-gap: 5rem;
    margin: 2rem 0;
}

.digital_section {
    background-color: rgb(from var(--color-paper-bg) r g b / .85);
    border-radius: .5rem;
}

.paper_section{
    margin: 3rem auto;
    max-width: 100%;
    display: flex;
    gap: .25rem;
}

.text_container {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    justify-content: center;
    align-items: center;
    padding: .5rem;
}

.two_links{
    display: flex;
    gap: .5rem;
}

@media (min-width: 700px ) {

    .text_container {
        padding: 1.5rem;
        align-items: flex-end;
    }

    .paper_section {
        max-width: 66.67%;
        gap: 3rem;
        max-height: 500px;
    }
}

